less/style.less
@import "cover.css";
@import url(http://fonts.googleapis.com/css?family=Fjalla+One);
@import url(http://fonts.googleapis.com/css?family=Roboto);

@accent1: #2ecc71;
@accent1_dark: #27ae60;
@accent2: #3498db;
@accent2_dark: #2980b9;

@boxsize: 100px;
@duration: 64s;

body {
  font-family: 'Roboto', sans-serif;
  background: linear-gradient(to top, #333, black);
}

h1, h2 {
  font-family: 'Fjalla One', sans-serif;
  visibility: hidden;
}

.lead {
    visibility: hidden;
}

.cover {
}

.btn-success {
  -webkit-box-shadow: 2px 2px 16px fadeout(darken(@accent2_dark, 40%), 80%);
}

.block-links {
  visibility: hidden;
}

.block-link {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -@boxsize / 2;
  margin-top: -@boxsize / 2;

  width: @boxsize;
  height: @boxsize;
  line-height: @boxsize;

  background: linear-gradient(to bottom, fadeout(white, 100%), fadeout(white, 90%));
  border: 2px solid white;
  border-radius: @boxsize / 2;

  -webkit-animation-duration: @duration;
  -webkit-animation-name: spin;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;

  -webkit-box-shadow: 2px 2px 16px fadeout(darken(@accent2_dark, 40%), 80%);
}

.block-link:hover {
  background: linear-gradient(to top, fadeout(white, 100%), fadeout(white, 90%));
  text-decoration: none;
}

.block-link.open {
  background: linear-gradient(to bottom, darken(white, 10%), white);
  color: black;
}
.block-link.open:hover {
}

.block-link span {
  font-size: 1.5em;
}

.circle-position-static(@angle) {
  left: 50% + cos(@angle) * 33%;
  top: 50% + sin(@angle) * 33%;
}

.circle-position(@angle) {
  -webkit-animation-delay: (@angle / 360deg) * -@duration;
}

.block-link.github {
  .circle-position(0deg);
}
.block-link.linkedin {
  .circle-position(72deg);
}
.block-link.twitter {
  .circle-position(144deg);
}
.block-link.projects {
  .circle-position(216deg);
}
.block-link.photo {
  .circle-position(288deg);
}

@-webkit-keyframes spin {
  from {
    -webkit-transform: rotate(0deg) translateX(300px) rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg) translateX(300px) rotate(-360deg);
  }
}

.block-links.pause-animation .block-link {
  -webkit-animation-play-state: paused;
}

// custom background

@fade: 90%;

svg {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
}

path {
  stroke: fadeout(#000, 90%);
}

circle {
  fill: fadeout(#fff, @fade);
  pointer-events: none;
}

/* original colors
.q0-9 { fill: fadeout(rgb(197,27,125), @fade); }
.q1-9 { fill: fadeout(rgb(222,119,174), @fade); }
.q2-9 { fill: fadeout(rgb(241,182,218), @fade); }
.q3-9 { fill: fadeout(rgb(253,224,239), @fade); }
.q4-9 { fill: fadeout(rgb(247,247,247), @fade); }
.q5-9 { fill: fadeout(rgb(230,245,208), @fade); }
.q6-9 { fill: fadeout(rgb(184,225,134), @fade); }
.q7-9 { fill: fadeout(rgb(127,188,65), @fade); }
.q8-9 { fill: fadeout(rgb(77,146,33), @fade); }
*/

.q0-9 { fill: fadeout(#1abc9c, @fade); }
.q1-9 { fill: fadeout(#2ecc71, @fade); }
.q2-9 { fill: fadeout(#3498db, @fade); }
.q3-9 { fill: fadeout(#9b59b6, @fade); }
.q4-9 { fill: fadeout(#f1c40f, @fade); }
.q5-9 { fill: fadeout(#e67e22, @fade); }
.q6-9 { fill: fadeout(#e74c3c, @fade); }
.q7-9 { fill: fadeout(#ecf0f1, @fade); }
.q8-9 { fill: fadeout(#95a5a6, @fade); }

